# occluview

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/occlu-mesh-edit/: Cargo.toml
crates/occlu-mesh-edit/src/: adjacency.rs  attributes.rs  brush.rs  brush_csr.rs  brush_index.rs  brush_math.rs  brush_tests.rs  cap_delaunay.rs  cap_fair.rs  cap_fit.rs  cap_guard.rs  cap_lawson.rs  cap_minweight.rs  cap_refine.rs  cap_support.rs  component_pick.rs  components.rs  delete_crop.rs  error.rs  holes.rs  holes_cleanup.rs  holes_gate.rs  holes_matrix_tests.rs  holes_socket_tests.rs  holes_soup_tests.rs  holes_tests.rs  holes_walk.rs  lib.rs  normals.rs  orientation.rs  pinch.rs  tests.rs  topology.rs  topology_analysis.rs  types.rs  validate.rs
crates/occlu-mesh-edit/src/bridge_split/: attributes.rs  cap.rs  clip.rs  mod.rs  operation.rs  planar_cap.rs  rims.rs  types.rs  validate.rs
crates/occlu-mesh-edit/src/repair/: debris.rs  degenerate.rs  manifold.rs  mod.rs  orient.rs  tests.rs  weld.rs
crates/occlu-mesh-edit/src/section/: mod.rs
crates/occlu-mesh-edit/src/tests/: attributes.rs  holes.rs  operations.rs
crates/occluview-app/: Cargo.toml  build.rs
crates/occluview-app/src/: app_bootstrap.rs  app_chrome.rs  app_files.rs  app_paths.rs  bridge_split_overlay.rs  cut_geometry.rs  cut_geometry_tests.rs  cut_manipulator.rs  cut_manipulator_hostile_tests.rs  cut_overlay.rs  cut_ruler.rs  cut_tool.rs  cut_tool_tests.rs  jump_list.rs  layer_actions.rs  live_viewport.rs  main.rs  measure_draw.rs  measure_overlay.rs  measure_tool.rs  mesh_editor_groups.rs  mesh_editor_icons.rs  mesh_editor_icons_layer_menu.rs  mesh_editor_overlay.rs  probe_section.rs  repair_report.rs  scene_loading.rs  sculpt_tool.rs  sculpt_worker.rs  section_view.rs  section_view_tests.rs  ui_theme.rs  update_notice.rs
crates/occluview-app/src/app/: app_bridge_split.rs  app_cut_measure.rs  app_dialogs.rs  app_layer_interaction.rs  app_load_errors.rs  app_loading.rs  app_mesh_editor.rs  app_mesh_export.rs  app_render.rs  app_scale_bar.rs  app_scene_commit.rs  app_sculpt.rs  app_sculpt_worker.rs  app_viewport.rs  mod.rs  selection_overlay.rs  state.rs
crates/occluview-app/src/bridge_split/: job.rs  mod.rs  scene_apply.rs  scene_apply_tests.rs  state.rs  tests.rs
crates/occluview-app/src/cut_ruler/: mapping_tests.rs  model.rs  panel.rs  panel_tests.rs
crates/occluview-app/src/edit_mode/: mod.rs  multi_layer_selection_tests.rs  scene_sync.rs  selection.rs  selection_cache.rs  selection_ops.rs  selection_set.rs  selection_tests.rs  session.rs  session_multi_layer_tests.rs  session_tests.rs  state.rs  sync_tests.rs  tests.rs  undo.rs  undo_snapshot.rs
crates/occluview-app/src/layers_overlay/: color.rs  label.rs  layout.rs  menu.rs  mod.rs  row.rs
crates/occluview-app/src/primary_ui_tests/: chrome.rs  loading.rs  mod.rs  platform.rs  viewport.rs
crates/occluview-app/src/single_instance/: activation.rs  fallback.rs  mod.rs  protocol.rs  unix.rs  windows.rs
crates/occluview-app/src/viewer/: axis_gizmo.rs  camera.rs  interaction.rs  lasso_capture.rs  mod.rs  viewport_size.rs
crates/occluview-cli/: Cargo.toml
crates/occluview-cli/src/: export.rs  hps_export.rs  lib.rs  main.rs
crates/occluview-cli/src/hps_export/: args.rs  convert.rs  error.rs  manifest.rs  output.rs
crates/occluview-cli/tests/: hps_export.rs  thumbnail_placeholder.rs
crates/occluview-core/: Cargo.toml
crates/occluview-core/src/: bbox.rs  camera.rs  error.rs  frame.rs  jump_list.rs  lib.rs  mesh.rs  pca.rs  recent_files.rs  scale_bar.rs  scene.rs  units.rs
crates/occluview-core/src/camera/: framing.rs  input.rs  mod.rs  movement.rs  orbit.rs  orientation.rs  presets.rs  tests.rs
crates/occluview-core/src/mesh/: bridge_split_adapter.rs  bridge_split_robust.rs  bridge_split_robust_tests.rs  bridge_split_tests.rs  builder.rs  bvh.rs  edit_adapter.rs  mod.rs  normals.rs  principal_axis.rs  tests.rs  texture.rs  vertex.rs
crates/occluview-core/src/scene/: bounds.rs  graph.rs  id.rs  material.rs  mesh_entry.rs  mod.rs  picking.rs  section.rs  tests.rs
crates/occluview-formats/: Cargo.toml  build.rs
crates/occluview-formats/examples/: smoke_real_files.rs
crates/occluview-formats/src/: dispatch.rs  error.rs  glb_writer.rs  lib.rs  off.rs  probe.rs  texture_decode.rs
crates/occluview-formats/src/gltf/: accessor.rs  error.rs  glb.rs  json.rs  mod.rs  primitive.rs  reader.rs  scene.rs  tests.rs  (+1 more)
crates/occluview-formats/tests/: hps_public_api.rs
crates/occluview-hps/: Cargo.toml  build.rs
crates/occluview-hps/src/: base64.rs  crypto.rs  error.rs  faces.rs  key.rs  lib.rs  parser.rs  surface.rs  tests.rs  texture.rs  texture_tests.rs  xml.rs
crates/occluview-render/: Cargo.toml
crates/occluview-render/shaders/: cap.wgsl  mesh.wgsl
crates/occluview-render/src/: camera.rs  clipping.rs  cut_camera.rs  error.rs  gpu.rs  lib.rs  mesh_uniform.rs  offscreen.rs  pipeline.rs  pipeline_ghost.rs  pipeline_init.rs  pipeline_tests.rs  texture.rs
crates/occluview-render/tests/: cutview_diag.rs  ghost_cut.rs  golden_image.rs  prepared_scene.rs  shading_diag.rs
crates/occluview-robust-csg/: Cargo.toml
crates/occluview-robust-csg/src/: disc_split.rs  disc_split_tests.rs  lib.rs  native_mesh.rs  prepared_solid.rs  solid_compose.rs
crates/occluview-shell/: Cargo.toml
crates/occluview-shell/src/: com.rs  deferred_source.rs  error.rs  lib.rs  offscreen_factory.rs  placeholder.rs  registration.rs  render_thumb.rs  shell_contract.rs  shell_contract_tests.rs  shell_preview_tests.rs  test_support.rs  thumbnail_format.rs  thumbnail_timeout.rs
crates/occluview-thumbnail/: Cargo.toml
crates/occluview-thumbnail/src/: error.rs  fast_thumb.rs  lib.rs  offscreen_factory.rs  placeholder.rs  stream_read.rs  test_support.rs  thumbnail_format.rs  thumbnail_timeout.rs
crates/occluview-update/: Cargo.toml
crates/occluview-update/src/: lib.rs  tests.rs
(+119 files in other folders)
