# OccluView — Cargo workspace root.
#
# Layering law (AGENTS.md §0.4, ARCHITECTURE.md §3):
#   core ← (nothing)
#   formats → core
#   render  → core
#   shell   → core + render + formats
#   app     → core + formats + render + shell
#   cli     → core + formats + render + shell
# Cycles are P0. Never add an upward dependency.
#
# License: Apache-2.0 (NOTICE + LICENSE).

[workspace]
resolver = "2"
members = [
    "crates/occluview-core",
    "crates/occluview-formats",
    "crates/occluview-render",
    "crates/occluview-shell",
    "crates/occluview-app",
    "crates/occluview-cli",
]
# `cargo check/test` without -p uses default-members; restrict to the
# cross-platform crates so Linux/macOS dev machines don't try to build the
# Windows-only shell/app crates (ADR-0001: Windows-first). On Windows, build
# the full workspace explicitly:
#   cargo check -p occluview-app -p occluview-shell
default-members = [
    "crates/occluview-core",
    "crates/occluview-formats",
    "crates/occluview-render",
    "crates/occluview-cli",
]

# Workspace-wide package metadata. Crates override only what they need.
[workspace.package]
version = "0.0.1"            # pre-1.0; see CHANGELOG.md
edition = "2021"
rust-version = "1.81"        # MSRV; matches rust-toolchain.toml
authors = ["OccluTrace, Inc. and contributors"]
license = "Apache-2.0"
repository = "https://github.com/occlutrace/occluview"
homepage = "https://occlutrace.ai"
publish = false              # we are not on crates.io yet

# Shared dependency versions (single source of truth). Reference as
# `dep = { workspace = true }` in each crate's [dependencies].
[workspace.dependencies]
# Internal crates.
occluview-core    = { path = "crates/occluview-core", version = "0.0.1" }
occluview-formats = { path = "crates/occluview-formats", version = "0.0.1" }
occluview-render  = { path = "crates/occluview-render", version = "0.0.1" }
occluview-shell   = { path = "crates/occluview-shell", version = "0.0.1" }

# Math / numerics.
glam    = "0.29"            # permissive (MIT OR Apache-2.0)
bytemuck = { version = "1.18", features = ["derive"] }

# Parallelism / async.
rayon   = "1.10"

# Error handling.
thiserror = "1.0"
anyhow    = "1.0"           # binaries only (AGENTS.md §4 / ENGINEERING.md §3)

# Serialization (glTF JSON parsing — ADR-0010).
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for offscreen render in the GUI app.
pollster   = "0.4"

# Image encode/decode: PNG for golden tests + thumbnail output, JPEG for glTF
# texture images (dental GLBs commonly embed JPEG textures).
image      = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Memory-mapped file loading for large meshes (ADR-0004 streaming path).
memmap2    = "0.9"

# Logging.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPU / rendering.
wgpu = "22.0"               # pinned; bumping is a PR + changelog entry (ADR-0002)

# Windowing / GUI (ADR-0003).
egui    = "0.29"
eframe  = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
rfd     = { version = "0.14", default-features = false, features = ["xdg-portal"] }

# Windows bindings (shell + windowing interop) — windows-rs only.
# ADR-0005. Target = x86_64-pc-windows-msvc (rust-toolchain.toml).
target-our-windows = { version = "0", package = "windows", features = [
    # COM plumbing
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    # Shell / thumbnail provider
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Imaging",
    # GDI for HBITMAP interop
    "Win32_Graphics_Gdi",
] }

# Format loaders (ADR-0004).
# cgltf is a single-file C header; we build it via the `cc` crate in
# occluview-formats/build.rs.
cc = "1.1"

# Testing.
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace lints — applied to every crate via `lints.workspace = true`.
[workspace.lints.rust]
# `rust_2018_idioms` is a group; specific lints below must override it, so set
# the group priority to -1.
rust_2018_idioms         = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn   = "deny"
missing_docs             = "warn"
unused_qualifications    = "warn"

[workspace.lints.clippy]
# `pedantic` and `all` are groups; specific lints below must override them, so
# set the group priority to -1 (clippy requires this for overrides to win).
pedantic      = { level = "warn", priority = -1 }
all           = { level = "warn", priority = -1 }
# Complexity/hygiene lints (see AGENTS.md).
unwrap_used       = "deny"
expect_used       = "deny"
panic             = "deny"
todo              = "deny"
unimplemented     = "deny"
dbg_macro         = "deny"
print_stdout      = "deny"
print_stderr      = "deny"
# Sensible pedantic relaxations (override per-crate with justification).
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate      = { level = "allow", priority = 1 }
needless_pass_by_value  = { level = "allow", priority = 1 }

[profile.release]
# Strongly optimize the viewer and shell DLL.
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = "line-tables-only"   # keep stack traces for crash reports

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1                # faster dev runs for the wgpu hot path
debug = 1
