# occluview-app — the GUI binary (egui + wgpu). Depends on everything.
[package]
name = "occluview-app"
description = "OccluView desktop viewer — egui + wgpu."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "occluview"
path = "src/main.rs"

[dependencies]
occluview-core    = { workspace = true }
occluview-formats = { workspace = true }
occluview-render  = { workspace = true }
egui              = { workspace = true }
eframe            = { workspace = true }
rfd               = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
glam              = { workspace = true }
