# occluview-app - the GUI binary (egui + wgpu). Windows-only (ADR-0001).
[package]
name = "occluview-app"
description = "OccluView desktop viewer - egui + wgpu."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "occluview"
path = "src/main.rs"

# Cross-platform deps usable on any host (so `cargo check -p occluview-app`
# resolves on Linux for at least the non-GUI code paths).
[dependencies]
occluview-core    = { workspace = true }
occluview-formats = { workspace = true }
occluview-render  = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
glam              = { workspace = true }
pollster          = { workspace = true }

# Windows-only GUI deps. On non-Windows hosts these are not resolved, so the
# workspace builds on Linux dev machines (see root Cargo.toml default-members).
[target.'cfg(windows)'.dependencies]
egui              = { workspace = true }
eframe            = { workspace = true }
rfd               = { workspace = true }
