# occluview-cli — headless CLI: convert / render-to-png / thumbnail.
# Depends on core + render + formats. NOT on the GUI crates (keep it small).
[package]
name = "occluview-cli"
description = "Headless OccluView CLI: render thumbnails, convert formats."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "occluview-cli"
path = "src/main.rs"

[dependencies]
occluview-core    = { workspace = true }
occluview-formats = { workspace = true }
occluview-render  = { workspace = true }
occluview-shell   = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
