# occluview-cli — headless CLI: convert / render-to-png / thumbnail / HPS export.
# Depends on core + render + formats + thumbnail. It has no Windows shell
# dependency so the Linux thumbnailer stays a platform-neutral binary.
[package]
name = "occluview-cli"
description = "Headless OccluView CLI: render thumbnails, convert formats."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "occluview-cli"
path = "src/main.rs"

[[bin]]
name = "occluview-hps-export"
path = "src/bin/occluview-hps-export.rs"

[dependencies]
occluview-core    = { workspace = true }
occluview-formats = { workspace = true }
occluview-render  = { workspace = true }
occluview-thumbnail = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
image             = { workspace = true }
glam              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }

[dev-dependencies]
tempfile = "3"
