# occluview-core — pure logic. NO I/O, NO GPU, NO Win32, NO panics.
# Layering: this crate depends on NOTHING in this workspace. (AGENTS.md §0.4)
[package]
name = "occluview-core"
description = "Pure logic for OccluView: math, units, mesh data model, scene graph, camera."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
glam      = { workspace = true }
bytemuck  = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
