# occluview-hps - product-neutral HPS parser.
[package]
name = "occluview-hps"
description = "Product-neutral parser for HPS dental surfaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
# Private/offline builds may embed an obfuscated HPS key generated only in
# this crate's OUT_DIR from OCCLUVIEW_HPS_EMBEDDED_KEY.
private-hps-key = []

[dependencies]
adler2   = { workspace = true }
blowfish = { workspace = true }
image    = { workspace = true }
md-5     = { workspace = true }
thiserror = { workspace = true }
zeroize  = { workspace = true }
zip      = { workspace = true }
